# renote

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml  cog.toml  deny.toml  flake.nix  justfile
nix/: checks.nix  devshell.nix  packages.nix
renote/: Cargo.toml
renote/src/: lib.rs
scripts/: commit-msg
